# oplabfasttest

./: .gitignore  .gitmodules  tests.md
docker-env/: Dockerfile  README.md  build_gtest.sh
q1/: README.md
q1/cpp/: CMakeLists.txt
q1/cpp/cli/: cli.cpp
q1/cpp/src/: area.cpp  area.hpp
q1/cpp/test/: test.cpp
q2/: README.md
q2/rust/prime_generator/: Cargo.toml
q2/rust/prime_generator/src/: main.rs  primes.rs
q3/: README.md
q3/erlang/helloworld/: README.txt  hello.beam  hello.erl
q3/erlang/src/: sequencesearch.erl
q3/python/searchsequence/: searchsequence.py
q3/python/tests/: test.py
q4/: README.md
q4/python/cli/: cli.py
q4/python/operations/: operations.py
q4/python/tests/: test.py
